--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="google-site-verification" content="t39a8PJXFTOOxukOGuxsMYpmRu6JYM7IKd8yc8fbyEE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Framer Clock UI</title>
+    <title>Project Skripsi: PROTOTIPE SISTEM ALARM PENDETEKSI ASAP DAN KEBAKARAN DINI MENGGUNAKAN KIPAS DAN POMPA AIR BERBASIS ARDUINO UNO</title>
     <style>
         body {
             background-color: black;
