--- a/index.html
+++ b/index.html
@@ -550,41 +550,17 @@ const secondHandAnimation = {
 
 <div class="description">
             <h2>Kesimpulan</h2>
-            <p>.</p>
-            <p>.</p>
-        </div>
-		
-		<pre><code class="language-js">
-import { motion } from "framer-motion";
-
-const secondHandAnimation = {
-    from: { rotate: 6 * second + 6 * (millisecond / 1000) },
-    to: { 
-        rotate: 6 * second + 6 * (millisecond / 1000) + 360,
-        transition: { duration: 60, ease: "linear", repeat: Infinity }
-    }
-};
-</code></pre>
-
-<div class="description">
-            <h2></h2>
-            <p>.</p>
+            <p>Alat sistem alarm pendeteksi asap dan kebakaran dini telah berhasil di buat
+dan dari hasil pengujian pada alat tersebut dapat disimpulkan bahwa alat tersebut
+dapat mendeteksi asap dan api tersebut yang ditampilkan pada LCD dan alarm pada
+buzzer. Alat sistem alarm pendeteksi asap dan kebakaran dini ini dapat efektif
+dalam memberikan peringatan dini kepada manusia. Dengan adanya sistem ini,
+potensi kerugian akibat kebakaran dapat diminimalisir, karena manusia memiliki
+lebih banyak waktu untuk mengambil tindakan pencegahan atau evakuasi sebelum
+bahaya makin berkembang.</p>
             <p>.</p>
         </div>
 		
-		<pre><code class="language-js">
-import { motion } from "framer-motion";
-
-const secondHandAnimation = {
-    from: { rotate: 6 * second + 6 * (millisecond / 1000) },
-    to: { 
-        rotate: 6 * second + 6 * (millisecond / 1000) + 360,
-        transition: { duration: 60, ease: "linear", repeat: Infinity }
-    }
-};
-</code></pre>
-
-
 <div class="description">
             <h2>The Full Code</h2>
             <p>.</p>
