--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Skripsi: PROTOTIPE SISTEM ALARM PENDETEKSI ASAP DAN KEBAKARAN DINI MENGGUNAKAN KIPAS DAN POMPA AIR BERBASIS ARDUINO UNO</title>
+	<meta name="description" content="Farid Ardiansyah adalah seorang [profesi/bidang keahlian]. Temukan portofolio, blog, dan informasi kontak saya di sini.">
+	<meta name="google-site-verification" content="t39a8PJXFTOOxukOGuxsMYpmRu6JYM7IKd8yc8fbyEE" />
     <style>
         body {
             background-color: black;
