--- a/index.html
+++ b/index.html
@@ -511,6 +511,41 @@ pre {
         color: #777;
         font-weight: bold;
     }
+	
+	  .button, .back-btn {
+            border: 2px solid white;
+            padding: 10px 20px;
+            border-radius: 50px;
+            cursor: pointer;
+            background: transparent;
+            color: white;
+            font-size: 40px;
+            display: inline-block;
+            text-align: center;
+            margin: 10px;
+        }
+        .hidden { display: none; }
+        .input-container { text-align: center; }
+        input {
+            background: black;
+            color: white;
+            border: none;
+            border-bottom: 2px solid white;
+            font-size: 40px;
+            text-align: center;
+            outline: none;
+            margin-bottom: 20px;
+            width: 300px;
+            padding: 10px;
+        }
+        footer {
+            position: absolute;
+            bottom: 10px;
+            text-align: center;
+            width: 100%;
+            font-size: 14px;
+            opacity: 0.6;
+        }
 
 
 		
@@ -593,6 +628,18 @@ pre {
             Sebelum memasuki materi yang saya sampaikan, mari kita baca doa terlebih dahulu, Aamiin, Terima Kasih, Selamat Belajar, Membaca, dan Mencoba.
         </p>
 		
+		<div id="main-container">
+        <button id="sayHiBtn" class="button">→ say hi</button>
+    </div>
+
+    <div id="inputContainer" class="hidden">
+        <div class="input-container">
+            <input type="text" id="messageInput" placeholder="Farid Ardiansyah...">
+        </div>
+        <button id="sendBtn" class="button">Send</button>
+        <button id="backBtn" class="back-btn">Back</button>
+    </div>
+		
 		<!-- Link dengan garis pemisah -->
 <div class="link-container">
     <a href="https://library.gunadarma.ac.id/repository/prototipe-sistem-alarm-pendeteksi-asap-dan-kebakaran-dini-menggunakan-kipas-dan-pompa-air-berbasis-arduino-uno-skripsi" class="styled-link">Library Skripsi<a>
@@ -613,7 +660,7 @@ dan kipas, LCD 16x2 I2C sebagai keluaran untuk penampil layar untuk memberi
 tahu keadaan dan nilai analog, Kipas untuk mengurangi asap yang banyak atau
 sedikit, Pompa air mini untuk memadamkan api. Untuk pemrograman Arduino
 menggunakan aplikasi Arduino IDE.</p>
-            <p>.</p>
+            <p>Coming Soon.</p>
         </div>
 		 <div class="image-container">
             <img src="images/5.jpg" alt="Large Image">
@@ -622,7 +669,7 @@ menggunakan aplikasi Arduino IDE.</p>
 	<div class="description">
             <h2>Komponen yang digunakan</h2>
             <p>Berikut adalah daftar komponen yang digunakan dalam proyek ini</p>
-            <p>Aktivator 12 V dan 9 V, sensor api, sensor MQ-2, mikrokontroler ATmega 328P Arduino UNO R3, modul relay 2 channel, pompa air mini 12 VDC, kipas angin 12VDC, LCD 16x2 I2c, Buzzer</p>
+            <p>1. Aktivator 12 V dan 9 V, 2. sensor api, 3. sensor MQ-2, 4. mikrokontroler ATmega 328P Arduino UNO R3, 5. modul relay 2 channel, 6. pompa air mini 12 VDC, 7. kipas angin 12VDC, 8. LCD 16x2 I2c, 9. Buzzer</p>
         </div>
 		
 		<div class="image-container">
@@ -638,7 +685,7 @@ mengaktifkan semua komponen pada blok input, proses dan output. Lalu input akan
 mengirim kan data yang diterima ke bagian blok peroses agar dapat diproses. Lalu
 setelah selesai diproses hasilnya akan dikirimkan ke blok output agar semua
 komponen bekerja sesuai dengan alat yang dirancang.</p>
-            <p>.</p>
+            <p>Coming Soon.</p>
         </div>
 		<div class="image-container">
             <img src="images/23.jpg" alt="Large Image">
@@ -795,7 +842,6 @@ else {
   lcd.clear();
 }
 }
-
 </code>
             </div>
         </pre>
@@ -813,7 +859,7 @@ else {
 </a>
 
 <!-- Downloaded Message -->
-<div class="downloaded-message" id="downloadedMessage" style="display: none;">Downloaded!</div>
+<div class="downloaded-message" id="downloadedMessage" style="display: none;">Berhasil diunduh ya!</div>
 
 
 		
@@ -851,8 +897,8 @@ mendeteksi asap dari hasil pembakaran kardus + kertas dan obat nyamuk.</p>
         </div>
 
 <div class="description">
-            <p>.</p>
-            <p>.</p>
+            <p>Coming Soon.</p>
+            <p>Coming Soon.</p>
         </div>
 		
 	
@@ -867,13 +913,13 @@ dalam memberikan peringatan dini kepada manusia. Dengan adanya sistem ini,
 potensi kerugian akibat kebakaran dapat diminimalisir, karena manusia memiliki
 lebih banyak waktu untuk mengambil tindakan pencegahan atau evakuasi sebelum
 bahaya makin berkembang.</p>
-            <p>.</p>
+            <p>Coming Soon.</p>
         </div>
 		
 <div class="description">
             <h2>The Full Code</h2>
-            <p>.</p>
-            <p>.</p>
+            <p>Coming Soon.</p>
+            <p>Coming Soon.</p>
         </div>
 			
 		    <div class="code-container">
@@ -1057,7 +1103,65 @@ else {
         </div>
     </div>
 	
-    <script>
+     <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
+        import { getFirestore, collection, addDoc, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyD_htQZ1TClnXKZGRJ4izbMQ02y6V3aNAQ",
+            authDomain: "wawa44-58d1e.firebaseapp.com",
+            projectId: "wawa44-58d1e",
+            storageBucket: "wawa44-58d1e.appspot.com",
+            messagingSenderId: "836899520599",
+            appId: "1:836899520599:web:b346e4370ecfa9bb89e312",
+            measurementId: "G-8LMP7F4BE9"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        const sayHiBtn = document.getElementById('sayHiBtn');
+        const inputContainer = document.getElementById('inputContainer');
+        const mainContainer = document.getElementById('main-container');
+        const sendBtn = document.getElementById('sendBtn');
+        const backBtn = document.getElementById('backBtn');
+        const messageInput = document.getElementById('messageInput');
+
+        async function checkSavedMessage() {
+            const q = query(collection(db, "messages"), orderBy("timestamp", "desc"));
+            const querySnapshot = await getDocs(q);
+
+            if (!querySnapshot.empty) {
+                sayHiBtn.textContent = 'thank you';
+            } else {
+                sayHiBtn.textContent = '→ say hi';
+            }
+        }
+        checkSavedMessage();
+
+        sayHiBtn.addEventListener('click', () => {
+            mainContainer.classList.add('hidden');
+            inputContainer.classList.remove('hidden');
+        });
+
+        backBtn.addEventListener('click', () => {
+            inputContainer.classList.add('hidden');
+            mainContainer.classList.remove('hidden');
+        });
+
+        sendBtn.addEventListener('click', async () => {
+            const message = messageInput.value.trim();
+            if (message !== '') {
+                await addDoc(collection(db, "messages"), {
+                    text: message,
+                    timestamp: new Date()
+                });
+                sayHiBtn.textContent = 'thank you';
+                inputContainer.classList.add('hidden');
+                mainContainer.classList.remove('hidden');
+            }
+        });
+
     window.addEventListener("scroll", function () {
         const sidebarLine = document.querySelector(".sidebar-line");
         const sections = document.querySelectorAll("h2");
