--- a/index.html
+++ b/index.html
@@ -526,18 +526,24 @@ pre {
         }
         .hidden { display: none; }
         .input-container { text-align: center; }
-        input {
-            background: black;
-            color: white;
-            border: none;
-            border-bottom: 2px solid white;
-            font-size: 40px;
-            text-align: center;
-            outline: none;
-            margin-bottom: 20px;
-            width: 300px;
-            padding: 10px;
-        }
+        textarea {
+    width: 500px;
+    max-width: 1500px;
+    min-width: 800px;
+    height: auto;
+    min-height: 700px;
+    max-height: 1500px;
+    padding: 15px;
+    background: black;
+    color: white;
+    border: 2px solid white;
+    font-size: 30px;
+    text-align: left;
+    outline: none;
+    resize: vertical; /* Hanya bisa diperbesar ke bawah */
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
         footer {
             position: absolute;
             bottom: 10px;
@@ -634,7 +640,7 @@ pre {
 
     <div id="inputContainer" class="hidden">
         <div class="input-container">
-            <input type="text" id="messageInput" placeholder="Farid Ardiansyah...">
+         <textarea id="messageInput" placeholder="Farid Ardiansyah membutuhkan pesan yg bisa di sampaikan"></textarea>
         </div>
         <button id="sendBtn" class="button">Send</button>
         <button id="backBtn" class="back-btn">Back</button>
