--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
             font-size: 24px;
             color: #fff;
             margin-bottom: 10px;
+	 margin-top: 40px;
         }
 
         .top-bar a {
@@ -274,6 +275,7 @@
             max-width: 700px;
             font-size: 28px;
             color: #333;
+			 margin-top: 40px;
         }
 
         .note-box i {
@@ -532,6 +534,7 @@ pre {
     display: flex;
     align-items: center;
     gap: 10px;
+	  margin-top: 40px;
 }
 
 .styled-link {
