--- a/index.html
+++ b/index.html
@@ -660,6 +660,14 @@ pre {
 	z-index: 1;
 }
 
+	    
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
 
 	
     </style>
@@ -1231,7 +1239,20 @@ else {
     </a>
 </div>
 	
-	
+	<h2 style="font-size: 28px; margin-bottom: 15px;">Website ini sedang dalam perkembangan</h2>
+  <p style="font-size: 18px; color: #ccc;">Fitur dan tampilan mungkin akan berubah seiring waktu.</p>
+  
+  <button onclick="document.getElementById('popup-dev').style.display='none'" style="
+    margin-top: 30px;
+    padding: 10px 20px;
+    background: none;
+    border: 2px solid #00ffff;
+    color: #00ffff;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+  ">Saya Mengerti</button>
+</div>
 
 
      <script type="module">
